--- a/public/resources/partials/splash.html
+++ b/public/resources/partials/splash.html
@@ -1,5 +1,5 @@
 
-<div class="splash parallax-container">
+<div class="parallax-container screen" id="splash">
   <div class="splash-content-container parallax-element">
     <h1 class="splash-title-1">cadence</h1>
   </div>
