--- a/src/components/nav-bar/nav-bar.pug
+++ b/src/components/nav-bar/nav-bar.pug
@@ -1,6 +1,8 @@
+include ../../util/include/include-script
++include-script('./resources/js/nav-bar.js')
 div(class="nav-bar")
     div(class="nav-bar-content")
-        a(class="nav-bar-item nav-item-left") left
-        a(class="nav-bar-item nav-item-right") right
-        a(class="nav-bar-item nav-item-top") top
-        a(class="nav-bar-item nav-item-bottom") bottom
+        a(id="nav-item-left" class="nav-bar-item") left
+        a(id="nav-item-right" class="nav-bar-item" href="#about") right
+        a(id="nav-item-top" class="nav-bar-item") top
+        a(id="nav-item-bottom" class="nav-bar-item") bottom
