--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -6,5 +6,5 @@ block title
 block pre-content
 
 block content
-    include ../components/splash/splash
-    div(class="random")
+    include ../components/home/home
+    include ../components/about/about
