--- a/public/resources/partials/nav-bar.html
+++ b/public/resources/partials/nav-bar.html
@@ -1,4 +1,5 @@
 
+<script type="text/javascript">requirejs(["./resources/js/nav-bar.js"], function(){ })</script>
 <div class="nav-bar">
-  <div class="nav-bar-content"><a class="nav-bar-item nav-item-left">left</a><a class="nav-bar-item nav-item-right">right</a><a class="nav-bar-item nav-item-top">top</a><a class="nav-bar-item nav-item-bottom">bottom</a></div>
+  <div class="nav-bar-content"><a class="nav-bar-item" id="nav-item-left">left</a><a class="nav-bar-item" id="nav-item-right" href="#about">right</a><a class="nav-bar-item" id="nav-item-top">top</a><a class="nav-bar-item" id="nav-item-bottom">bottom</a></div>
 </div>
