--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -1,13 +1,13 @@
 @import '../../resources/sass/_fonts.scss';
 
-.splash-background-image{
+.home-background-image{
     position: absolute;
     top: 0; bottom: 0; left: 0; right: 0;
     background-position: center center;
     background-size: cover;
 }
 
-.splash-title{
+.home-title{
     position: absolute;
     font-size: 10em;
     margin: 0;
@@ -20,13 +20,11 @@
     z-index: 5;
 }
 
-.splash{
+#home{
     position: relative;
-    width: 100%;
-    height: 100vh;
 
-    .splash-background-content{
-        .splash-background-content-darken{
+    .home-background-content{
+        .home-background-content-darken{
             position: absolute;
             top: 0; bottom: 0; right: 0; left: 0;
             background-color: black;
@@ -34,34 +32,32 @@
             z-index: 20;
         }
 
-        .splash-background{
-            @extend .splash-background-image;
+        .home-background{
+            @extend .home-background-image;
             background-image: url(../images/ocean.JPG);
             z-index: 0;
         }
 
-        .splash-foreground{
-            @extend .splash-background-image;
+        .home-foreground{
+            @extend .home-background-image;
             background-image: url(../images/ocean-foreground.gif);
             z-index: 10;
         }
     }
 
-    .splash-content-container{
+    .home-content-container{
         position: relative;
         height: 100%;
         width: 100%;
 
-        .splash-title-1{
-            @extend .splash-title;
+        .home-title-1{
+            @extend .home-title;
             font-family: $canter-bold-strips;
         }
 
-        .splash-title-2{
-            @extend .splash-title;
+        .home-title-2{
+            @extend .home-title;
             font-family: $canter-bold;
         }
     }
-
-    
 }
