--- a/src/resources/sass/main.scss
+++ b/src/resources/sass/main.scss
@@ -6,11 +6,12 @@ body{
     position: relative;
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
 
 .vignette{
-    -moz-box-shadow: inset 0 0 10em black;  
-    -webkit-box-shadow: inset 0 0 10em black;   
+    -moz-box-shadow: inset 0 0 10em black;
+    -webkit-box-shadow: inset 0 0 10em black;
     box-shadow: inset 0 -0 10em black;
     position: absolute;
     top: 0;
@@ -18,6 +19,17 @@ body{
     width: 100%;
     height: 100%;
     content: "";
+}
+
+#content{
+    display: flex;
+    flex-direction: row;
+}
+
+.screen{
+  flex-grow: 1;
+  flex: 1;
+  height: 100vh;
 }
 
 .random{
