--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -6,5 +6,9 @@ block title
 block pre-content
 
 block content
-    include ../components/home/home
-    include ../components/about/about
+    div(class="content-row")
+        include ../components/contact/contact.pug
+    div(class="content-row")
+        include ../components/examles/examples.pug
+        include ../components/home/home.pug
+        include ../components/about/about.pug
