--- a/public/resources/css/styles.css
+++ b/public/resources/css/styles.css
@@ -1,6 +1,12 @@
 #about {
   background-color: green; }
 
+#contact {
+  background-color: red; }
+
+#examples {
+  background-color: blue; }
+
 header {
   position: fixed;
   top: 0;
@@ -145,6 +151,9 @@ body {
   content: ""; }
 
 #content {
+  text-align: center; }
+
+.content-row {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -153,7 +162,11 @@ body {
   -webkit-box-direction: normal;
   -webkit-flex-direction: row;
       -ms-flex-direction: row;
-          flex-direction: row; }
+          flex-direction: row;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
 
 .screen {
   -webkit-box-flex: 1;
@@ -163,7 +176,8 @@ body {
   -webkit-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  height: 100vh; }
+  height: 100vh;
+  max-width: 100vw; }
 
 .random {
   position: relative;
