--- a/src/components/home/home.pug
+++ b/src/components/home/home.pug
@@ -1,4 +1,4 @@
-div(id="home" class="parallax-container screen")
+div(id="home" class="parallax-container screen" title="Home")
     div(class="home-content-container parallax-element")
         h1(class="home-title-1") cadence
         //- h1(class="home-title-2") cadence
