--- a/src/resources/sass/main.scss
+++ b/src/resources/sass/main.scss
@@ -22,14 +22,20 @@ body{
 }
 
 #content{
+    text-align: center;
+}
+
+.content-row{
     display: flex;
     flex-direction: row;
+    justify-content: center;
 }
 
 .screen{
-  flex-grow: 1;
-  flex: 1;
-  height: 100vh;
+    flex-grow: 1;
+    flex: 1;
+    height: 100vh;
+    max-width: 100vw;
 }
 
 .random{
