--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -7,7 +7,9 @@ block pre-content
 
 block content
     div(class="content-row")
+        include ../components/empty-screen/empty-screen.pug
         include ../components/contact/contact.pug
+        include ../components/empty-screen/empty-screen.pug
     div(class="content-row")
         include ../components/examles/examples.pug
         include ../components/home/home.pug
