--- a/src/components/nav-bar/nav-bar.scss
+++ b/src/components/nav-bar/nav-bar.scss
@@ -1,5 +1,5 @@
 @import '../../resources/sass/_fonts.scss';
-$nav-margin: 15px;
+$nav-margin: 30px;
 
 .nav-bar{
     position: fixed;
@@ -7,39 +7,48 @@ $nav-margin: 15px;
     z-index: 1000;
 
     .nav-bar-content{
+        position: relative;
         width: 100%;
         height: 100%;
 
-        .nav-bar-item{
-            color: white;
-            font-family: $canter-bold;
+        .nav-item-container{
             position: absolute;
-            font-size: 2em;
-            letter-spacing: 0.3em;
-            text-decoration: none;
+            display: flex;
+            justify-content: center;
+            align-items: center;
 
-            &#nav-item-left{
+            &.nav-item-container-left{
                 transform: rotate(-90deg) translateY(-50%);
                 top: 50%;
                 left: $nav-margin;
             }
 
-            &#nav-item-right{
+            &.nav-item-container-right{
                 transform: rotate(90deg) translateY(-50%);
                 top: 50%;
                 right: $nav-margin;
             }
 
-            &#nav-item-top{
+            &.nav-item-container-top{
                 top: $nav-margin;
                 left: 50%;
                 transform: translateX(-50%);
             }
 
-            &#nav-item-bottom{
+            &.nav-item-container-bottom{
                 bottom: $nav-margin;
                 left: 50%;
                 transform: translateX(-50%);
+            }
+
+            .nav-bar-item{
+                color: white;
+                font-family: $canter-bold;
+                position: absolute;
+                font-size: 2em;
+                letter-spacing: 0.3em;
+                text-decoration: none;
+                text-transform: lowercase;
             }
         }
     }
