--- a/public/resources/css/styles.css
+++ b/public/resources/css/styles.css
@@ -88,31 +88,41 @@ header {
       -webkit-box-align: center;
       -webkit-align-items: center;
           -ms-flex-align: center;
-              align-items: center; }
+              align-items: center;
+      -webkit-transition: 1s ease-in-out;
+      transition: 1s ease-in-out; }
       .nav-bar .nav-bar-content .nav-item-container.nav-item-container-left {
         -webkit-transform: rotate(-90deg) translateY(-50%);
             -ms-transform: rotate(-90deg) translateY(-50%);
                 transform: rotate(-90deg) translateY(-50%);
         top: 50%;
         left: 30px; }
+        .nav-bar .nav-bar-content .nav-item-container.nav-item-container-left.hidden {
+          left: -100%; }
       .nav-bar .nav-bar-content .nav-item-container.nav-item-container-right {
         -webkit-transform: rotate(90deg) translateY(-50%);
             -ms-transform: rotate(90deg) translateY(-50%);
                 transform: rotate(90deg) translateY(-50%);
         top: 50%;
         right: 30px; }
+        .nav-bar .nav-bar-content .nav-item-container.nav-item-container-right.hidden {
+          right: -100%; }
       .nav-bar .nav-bar-content .nav-item-container.nav-item-container-top {
         top: 30px;
         left: 50%;
         -webkit-transform: translateX(-50%);
             -ms-transform: translateX(-50%);
                 transform: translateX(-50%); }
+        .nav-bar .nav-bar-content .nav-item-container.nav-item-container-top.hidden {
+          top: -100%; }
       .nav-bar .nav-bar-content .nav-item-container.nav-item-container-bottom {
         bottom: 30px;
         left: 50%;
         -webkit-transform: translateX(-50%);
             -ms-transform: translateX(-50%);
                 transform: translateX(-50%); }
+        .nav-bar .nav-bar-content .nav-item-container.nav-item-container-bottom.hidden {
+          bottom: -100%; }
       .nav-bar .nav-bar-content .nav-item-container .nav-bar-item {
         color: white;
         font-family: "CanterBold", sans-serif;
@@ -150,11 +160,11 @@ header {
   font-family: CanterOutline;
   src: url("../fonts/CanterOutline.otf") format("opentype"); }
 
-body {
+html, body {
   position: relative;
   margin: 0;
   padding: 0;
-  overflow: hidden; }
+  background-color: #322F31; }
 
 .vignette {
   -webkit-box-shadow: inset 0 0 10em black;
@@ -166,8 +176,29 @@ body {
   height: 100%;
   content: ""; }
 
+#viewport {
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  position: fixed; }
+  #viewport #viewport-content {
+    position: relative;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    -webkit-transition: 1s ease-in-out;
+    transition: 1s ease-in-out; }
+    #viewport #viewport-content.content-scaled {
+      -webkit-transform: scale(0.5);
+          -ms-transform: scale(0.5);
+              transform: scale(0.5); }
+
 #content {
-  text-align: center; }
+  position: relative;
+  text-align: center;
+  -webkit-transition: 1s ease-in-out;
+  transition: 1s ease-in-out; }
 
 .content-row {
   display: -webkit-box;
