--- a/public/resources/partials/examples.html
+++ b/public/resources/partials/examples.html
@@ -1,2 +1,2 @@
 
-<div class="screen" id="examples" title="Examples"></div>
+<div class="screen" id="examples" name="#examples" title="Examples"></div>
