--- a/public/resources/partials/home.html
+++ b/public/resources/partials/home.html
@@ -1,5 +1,5 @@
 
-<div class="parallax-container screen" id="home" title="Home">
+<div class="parallax-container screen" id="home" name="#home" title="Home">
   <div class="home-content-container parallax-element">
     <h1 class="home-title-1">cadence</h1>
   </div>
