--- a/src/resources/sass/main.scss
+++ b/src/resources/sass/main.scss
@@ -2,11 +2,11 @@
 @import './_fonts.scss';
 @import './_colors.scss';
 
-body{
+html, body{
     position: relative;
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    background-color: #322F31;
 }
 
 .vignette{
@@ -21,8 +21,27 @@ body{
     content: "";
 }
 
+#viewport{
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+    position: fixed;
+
+    #viewport-content{
+        position: relative;
+        top: 0; bottom: 0; left: 0; right: 0;
+        transition: 1s ease-in-out;
+
+        &.content-scaled{
+            transform: scale(0.5);
+        }
+    }
+}
+
 #content{
+    position: relative;
     text-align: center;
+    transition: 1s ease-in-out;
 }
 
 .content-row{
