Page waits to appear until loaded

--- a/src/layouts/page-layout.pug
+++ b/src/layouts/page-layout.pug
@@ -15,7 +15,7 @@ html
         +include-script('./resources/js/parallax.js')
         +include-script('./resources/js/main.js')
 
-    body
+    body(class="hidden")
         block pre-content
         div(id="viewport")
             include ../components/nav-bar/nav-bar
