--- a/public/resources/css/styles.css
+++ b/public/resources/css/styles.css
@@ -55,9 +55,6 @@
         height: 2em;
         margin-bottom: 0.5em; }
 
-#examples {
-  background-color: blue; }
-
 .fancy-text-area .fancy-text-area-input {
   width: 100%;
   height: 15em;
@@ -71,6 +68,9 @@
   border: none;
   outline: none;
   resize: none; }
+
+#examples {
+  background-color: blue; }
 
 .fancy-text-box {
   font-family: "Open Sans", sans-serif;
@@ -279,7 +279,11 @@ html, body {
   position: relative;
   margin: 0;
   padding: 0;
-  background-color: #322F31; }
+  background-color: #322F31;
+  -webkit-transition: 1s ease-in-out;
+  transition: 1s ease-in-out; }
+  html.hidden, body.hidden {
+    opacity: 0; }
 
 #viewport {
   width: 100vw;
