--- a/src/components/contact-form/contact-form.scss
+++ b/src/components/contact-form/contact-form.scss
@@ -45,6 +45,7 @@
                 width: 100%;
                 height: 2em;
                 margin-bottom: 0.5em;
+                font-size: 16pt;
             }
         }
     }
