--- a/src/components/nav-bar/nav-bar.pug
+++ b/src/components/nav-bar/nav-bar.pug
@@ -1,5 +1,5 @@
 include ../../util/include/include-script
-+include-script('./resources/js/nav-bar.js')
+//- +include-script('./resources/js/nav-bar.js')
 div(class="nav-bar")
     div(class="nav-bar-content")
         div(class="nav-item-container nav-item-container-left")
